--- a/frontend/hw-view/package.json
+++ b/frontend/hw-view/package.json
@@ -2,6 +2,7 @@
   "name": "hw-view",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:80",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -9,7 +10,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
